bin/testsuite/tests/compiler/src/errors/compiler5039.swg
#global testerror "Err0569"

var x = 0x1FFFFFFFF's32
